# go-jsonnet

./: .bazelrc  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  .pre-commit-hooks.yaml  .travis.yml  BUILD.bazel  Gopkg.toml  MANIFEST.in  MODULE.bazel  Makefile  README.md  WORKSPACE  _gen.go  ast.go  astcompkind_stringer.go  astliteralstringkind_stringer.go  astobjectfieldhide_stringer.go  astobjectfieldkind_stringer.go  builtins.go  builtins_benchmark_test.go  debugger.go  desugarer.go  error_formatter.go  evaluator.go  go.mod  go.sum  identifier_set.go  imports.go  interpreter.go  jsonml.go  jsonnet_test.go  lexer.go  lexer_test.go  literalfield_set.go  location.go  main.go  main_test.go  native_exec.go  (+18 more)
.github/: FUNDING  dependabot.yml
.github/workflows/: ci.yml  release.yml
ast/: BUILD.bazel  ast.go  clone.go  compkind_stringer.go  fodder.go  identifier_set.go  identifier_test.go  literalstringkind_stringer.go  location.go  objectfieldhide_stringer.go  objectfieldkind_stringer.go  stdast.go  util.go
astgen/: BUILD.bazel
bazel/: BUILD.bazel  deps.bzl  repositories.bzl
builtin-benchmarks/: base64.jsonnet  base64DecodeBytes.jsonnet  base64_byte_array.jsonnet  base64decode.jsonnet  comparison.jsonnet  comparison2.jsonnet  escapeStringJson.jsonnet  foldl.jsonnet  goFormat.jsonnet  lstripChars.jsonnet  manifestJsonEx.jsonnet  manifestTomlEx.jsonnet  manifestYamlDoc.jsonnet  member.jsonnet  parseInt.jsonnet  reverse.jsonnet  rstripChars.jsonnet  stripChars.jsonnet  substr.jsonnet
c-bindings/: .gitignore  BUILD.bazel  c-bindings.go  handles.go  internal.h  json.cpp  json.h  libjsonnet.cpp
c-bindings-tests/: build.sh  compat_test.py  run.sh
c-bindings-tests/jsonnet_import_test/: multi.jsonnet  stream.jsonnet
cmd/: BUILD.bazel  dumpstdlibast.go
cmd/dumpstdlibast/: BUILD.bazel  dumpstdlibast.go
cmd/internal/: BUILD.bazel
cmd/jsonnet/: BUILD.bazel  cmd.go
cmd/jsonnet-deps/: BUILD.bazel  cmd.go
cmd/jsonnet-lint/: BUILD.bazel  cmd.go
cmd/jsonnetfmt/: BUILD.bazel  cmd.go
cmd/jsonnetfmt/lib/: BUILD.bazel  enforce_comment_style.go  enforce_max_blank_lines.go  enforce_string_style.go  fix_indentation.go  fix_newlines.go  fix_parens.go  fix_plus_object.go  fix_trailing_commas.go  jsonnetfmt.go  no_redundant_slice_colon.go  pretty_field_names.go  sort_imports.go  strip.go  unparser.go
cmd/wasm/: BUILD.bazel  main.go
compat/: c_layer.go  internal.h  libjsonnet.cpp
compat_test/: build.sh  compat_test.py
dump/: BUILD.bazel  README.md  dump.go  dump_test.go  pointermap.go  utils.go
formatter/: BUILD.bazel  formatter.go  formatter_test.go
formatter/testdata/: json-to-xml.fmt.golden  json-to-xml.jsonnet  regular_expression.fmt.golden  regular_expression.jsonnet
internal/dump/: BUILD.bazel  dump.go  dump_test.go  utils.go
internal/errors/: BUILD.bazel  static_error.go
internal/formatter/: BUILD.bazel  canonicalize.go  enforce_comment_style.go  enforce_max_blank_lines.go  fix_indentation.go  (+11 more)
internal/testutils/: BUILD.bazel  test_utils.go
jsonnet/: cmd.go  jsonnet
linter/: BUILD.bazel  README.md  find_variables.go  linter.go  linter_test.go
linter/internal/common/: BUILD.bazel  common.go
linter/internal/traversal/: BUILD.bazel  traversal.go
linter/internal/types/: BUILD.bazel  build_graph.go  check.go  desc.go  doc.go  graph.go  placeholder.go  process_graph.go  stdlib.go
linter/internal/utils/: BUILD.bazel  utils.go
linter/internal/variables/: find_variables.go
linter/jsonnet-lint/: BUILD.bazel  cmd.go
linter/testdata/: argcheck_additional.jsonnet  argcheck_additional.linter.golden  argcheck_missed_required.jsonnet  argcheck_missed_required.linter.golden  argcheck_missing.jsonnet  argcheck_missing.linter.golden  argcheck_wrong_name.jsonnet  argcheck_wrong_name.linter.golden  array_widen.jsonnet  call_imported_number.jsonnet  call_imported_number.linter.golden  call_integer.jsonnet  call_integer.linter.golden  deep_array_call_integer.jsonnet  deep_array_call_integer.linter.golden  deeper_array_call_integer.jsonnet  deeper_array_call_integer.linter.golden  deepest_array_call_integer.jsonnet  deepest_array_call_integer.linter.golden  deepest_array_call_integer2.jsonnet  deepest_array_call_integer2.linter.golden  dollar.jsonnet  endless_loop.jsonnet  endless_loop.linter.golden  endless_loop2.jsonnet  endless_loop2.linter.golden  endless_loop3.jsonnet  endless_loop3.linter.golden  endless_loop4.jsonnet  endless_loop4.linter.golden  from_array_call_integer.jsonnet  from_array_call_integer.linter.golden  from_function_result_call_integer.jsonnet  from_function_result_call_integer.linter.golden  from_object_call_integer.jsonnet  from_object_call_integer.linter.golden  from_object_call_integer2.jsonnet  from_object_call_integer2.linter.golden  from_object_local_call_integer.jsonnet  from_object_local_call_integer.linter.golden  (+59 more)
parser/: BUILD.bazel  context.go  lexer.go  lexer_test.go  literalfield_set.go  parser.go  parser_test.go  static_error.go
pass/: BUILD.bazel  pass.go
python/: _jsonnet.c  _jsonnet_test.py
testdata/: %27.jsonnet  array.golden  array_comp_try_iterate_over_obj.golden  array_comp_try_iterate_over_obj.jsonnet  array_plus_bad.golden  arrcomp5.golden  arrcomp5.linter.golden  arrcomp_if4.golden  arrcomp_if4.linter.golden  arrcomp_if6.golden  arrcomp_if7.golden  assert3.golden  assert_equal4.golden  assert_equal5.golden  assert_equal6.golden  assert_failed.golden  assert_failed_custom.golden  bad_function_call.golden  bad_function_call.linter.golden  bad_function_call2.golden  bad_function_call2.linter.golden  bad_function_call_and_error.golden  bad_function_call_and_error.linter.golden  bad_index_array.linter.golden  bad_index_object.linter.golden  bad_index_string.golden  bad_index_string.linter.golden  binaryNot2.golden  binaryNot2.linter.golden  bitwise_and3.golden  bitwise_and4.golden  bitwise_and7.golden  bitwise_and7.jsonnet  bitwise_or10.golden  bitwise_shift4.golden  bitwise_shift5.golden  bitwise_shift5.jsonnet  bitwise_shift6.golden  bitwise_shift6.jsonnet  bitwise_xor7.golden  (+479 more)
toolutils/: BUILD.bazel
(+27 files in other folders)
