module(name = "jsonnet_go", version = "0.0.0")

bazel_dep(name = "gazelle", version = "0.30.0", repo_name = "bazel_gazelle")
bazel_dep(name = "jsonnet", version = "0.20.0", repo_name = "cpp_jsonnet")
bazel_dep(name = "rules_go", version = "0.39.1", repo_name = "io_bazel_rules_go")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "@jsonnet_go//:go.mod")
use_repo(
    go_deps,
    "com_github_fatih_color",
    "com_github_sergi_go_diff",
    "io_k8s_sigs_yaml",
)
