load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ast.go",
        "clone.go",
        "fodder.go",
        "identifier_set.go",
        "location.go",
        "util.go",
    ],
    importpath = "github.com/google/go-jsonnet/ast",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["util_test.go"],
    embed = [":go_default_library"],
)
