load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "c-bindings.go",
        "internal.h",
        "json.cpp",
        "json.h",
        "libjsonnet.cpp",
    ],
    cdeps = [
        "//cpp-jsonnet/include:libjsonnet",
    ],
    cgo = True,
    copts = ["-Wall -Icpp-jsonnet/include"],  # keep
    cxxopts = ["-std=c++11"],
    importpath = "github.com/google/go-jsonnet/c-bindings",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//ast:go_default_library",
        "//astgen:go_default_library",
    ],
)

go_binary(
    name = "c-bindings",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
