load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "find_variables.go",
        "linter.go",
    ],
    importpath = "github.com/google/go-jsonnet/linter",
    visibility = ["//visibility:public"],
    deps = [
        "//ast:go_default_library",
        "//parser:go_default_library",
    ],
)
