load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "context.go",
        "lexer.go",
        "literalfield_set.go",
        "parser.go",
        "static_error.go",
    ],
    importpath = "github.com/google/go-jsonnet/parser",
    visibility = ["//visibility:public"],
    deps = ["//ast:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "lexer_test.go",
        "parser_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//ast:go_default_library"],
)
