load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ],
    importpath = "github.com/google/go-jsonnet/cmd/wasm",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//internal/formatter:go_default_library",
    ],
)

go_binary(
    name = "libjsonnet.wasm",
    embed = [":go_default_library"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)
