load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "dump.go",
        "pointermap.go",
        "utils.go",
    ],
    importpath = "github.com/google/go-jsonnet/internal/dump",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["dump_test.go"],
    embed = [":go_default_library"],
)
