load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cmd.go"],
    importpath = "github.com/google/go-jsonnet/linter/jsonnet-lint",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//linter:go_default_library",
    ],
)

go_binary(
    name = "jsonnet-lint",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
